# mitsuba

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  example.env
.github/workflows/: docker-publish.yml  rust.yml
contrib/: mitsuba.nginx  mitsuba.service
docker/: .env  Dockerfile  docker-compose.yml
docs/: API.md  COMMANDS.md  PROXY.md  SETUP.md
docs/dev/: ARCHITECTURE.md
src/: http.rs  main.rs
src/web/: frontend.rs  mod.rs
static/js/: extension.js
