[package]
name = "mitsuba"
version = "1.12.4"
authors = ["reasv", "cerda", "moot"]
edition = "2021"
license = "AGPL-3.0"
keywords = ["web", "archive", "download", "downloader", "crawler"]
repository = "https://github.com/bibanon/mitsuba"
readme = "README.md"
categories  = ["web-programming::http-server"]
description = "Lightweight 4chan board archive software in Rust"
exclude = [
    "data/*",
]

mimalloc = ["mimalloc"]

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.23.0", features = ["full"] }
#tokio-util = { version = "0.6.4", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
nonzero_ext = "0.3.0"
anyhow = "1.0.68"
governor = "0.5.1"
bytes = "1.3.0"
backoff = { version = "0.4.0", features = ["tokio"] }
instant = "0.1.12"
regex = "1.7.0"
base64 = "0.20.0"
base32 = "0.4.0"
actix-web = { version = "4.2.1", features = ["rustls"] }
actix-files = "0.6.2"
clap = { version = "4.0.32", features = ["derive"] }
clap_derive = "4.0.21"
handlebars = { version = "4.3.6", features = ["dir_source"] }
unicode-truncate = "0.2.0"
handlebars_misc_helpers = { version = "0.12.1", features = ["string", "json"], default-features = false }
sqlx = { version = "0.6.2", features = [ "postgres", "macros", "migrate", "runtime-tokio-rustls", "offline" ] }
rust-embed = "6.4.2"
#mime_guess = "2.0.3"
new_mime_guess = "4.0.1"
sha2 = "0.10.6"
rust-s3 = { version = "0.31.0", features = ["tokio-rustls-tls"], default-features = false }
dashmap = "5.4.0"
weighted-rs = "0.1.3"
metrics = "0.20.1"
metrics-exporter-prometheus = { version = "0.11.0", features = ["http-listener"] }
metrics-util = "0.14.0"
futures = "0.3.25"
log4rs = "1.2.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
#disable secure mode, if you want to have it enabled then remove default-features
mimalloc = { version = "0.1.32", default-features = false, optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
